--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsnd -P ./tsconfig.json --respawn ./src/main.ts",
+    "start": "tsnd -P ./tsconfig.json --respawn ./src/app.ts",
     "build": "tsc --project ./"
   },
   "keywords": [],
